# C-Nangcao-BT

./: #list_view.glade#  #phonebook-list.glade#  .gitignore  CMakeLists.txt  README.md  list_view.glade  phonebook-list.glade  phonebook-list.glade~  phonebook.glade  phonebook.glade~
b/: CMakeCache.txt  Makefile  cmake_install.cmake  phonebook-list
inc/: CMakeLists.txt  db-main.c  db-main.h  utility.h  utils.h
inc/b/: CMakeCache.txt  Makefile  cmake_install.cmake  db-main  test.db
src/: gtk-test.c  phonebook-list.c  phonebook-main.c  utility.c  utils.c
